Fixes sidebar nav broken on Firefox browsers

--- a/static/reference.css
+++ b/static/reference.css
@@ -23,7 +23,7 @@ body {
  * ------------------------------------------------------------------------------------------ */
 
 /* Global Navbar */
-.navbar {
+body > .navbar {
   position: sticky;
   top: 0;
   z-index: 100;
